[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = "0.11.0"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false